Set correct package name for RedHat-based distros

--- a/vars/main.yml
+++ b/vars/main.yml
@@ -6,6 +6,6 @@ _restic_remote_packages:
     - openssh-client
   RedHat:
     - openssh-server
-    - ssh-keygen
+    - openssh
 
 restic_remote_packages: "{{ _restic_remote_packages[ansible_os_family] }}"
