Fix role names (changed since open-sourcing)

--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -12,4 +12,4 @@
     restic_remote_server_authorized_key: ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAI... rest-server@backupserver
 
   roles:
-    - role: restic_remote
+    - role: fifty2technology.restic_remote
