Fix molecule test. Still requires a self-compiled version of 'rest-server', see https://github.com/FIFTY2Technology/ansible-role-restic_server/issues/1 for mitigation

--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -7,6 +7,7 @@
 
   vars:
     backup_server: backupserver
+    restic_client_use_lvm: false  # doesn't work inside container, would use host's LVM
 
   roles:
     - role: fifty2technology.restic_client
@@ -16,6 +17,7 @@
 
   vars:
     backup_server: backupserver
+    restic_server_binary_install_dir: /tmp
 
   roles:
     - role: fifty2technology.restic_server
