--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,13 +1,16 @@
 ---
 
-- ansible.builtin.import_tasks: preflight.yml
+- name: Import preflight tasks
+  ansible.builtin.import_tasks: preflight.yml
   when:
     - restic_remote_client_is_remote
 
-- ansible.builtin.import_tasks: configure_client.yml
+- name: Import tasks to configure client
+  ansible.builtin.import_tasks: configure_client.yml
   when:
     - restic_remote_client_is_remote
 
-- ansible.builtin.import_tasks: configure_server.yml
+- name: Import tasks to configure server
+  ansible.builtin.import_tasks: configure_server.yml
   when:
     - restic_remote_client_is_remote
