Simplify rollout by not requiring user to specify fact we can gather
Before, the user had to specify the SSH pubkey manually, which would be
used by the backup server to connect to backup clients.
We can gather this during runtime, as we have to connect to the backup
server in the same way later during the playbook anyways.
This makes it easier hopefully.

--- a/tasks/configure_client.yml
+++ b/tasks/configure_client.yml
@@ -4,7 +4,7 @@
   ansible.posix.authorized_key:
     user: "{{ restic_remote_client_user }}"
     state: present
-    key: "{{ restic_remote_server_authorized_key }}"
+    key: "{{ _restic_remote_server_authorized_key.content | b64decode }}"
   become: true
 
 ###
