--- a/tasks/preflight.yml
+++ b/tasks/preflight.yml
@@ -41,3 +41,17 @@
   ansible.builtin.setup:
     gather_subset:
       - ssh_host_key_ed25519_public
+
+###
+# This key will be deployed to remote clients to authorize the backup server to
+# connect to clients via SSH.
+###
+- name: Gather SSH public key from backup server
+  ansible.builtin.slurp:
+    src: "/home/{{ restic_remote_server_user }}/.ssh/id_ed25519.pub"
+  register: _restic_remote_server_authorized_key
+  delegate_to: "{{ backup_server }}"
+  become: true
+  vars:
+    ansible_password: "{{ backup_server_password }}"
+    ansible_become_password: "{{ backup_server_become_password }}"
