--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -33,6 +33,11 @@ restic_remote_client_port: "{{ restic_server_listen_port | default('3000') }}"
 restic_remote_client_user: "{{ restic_client_user | default('restic') }}"
 
 ###
+# SSH port of the client, which will be used by the backup server to connect.
+###
+restic_remote_ssh_port: "22"
+
+###
 # Groupname getting granted `sudo` privileges on client to start systemd
 # services `restic-backup.service` and `restic-prune.service`. The client's
 # user must be in this group.
