--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -6,7 +6,7 @@ driver:
   name: podman
 platforms:
   - name: backupserver
-    image: "geerlingguy/docker-debian11-ansible:latest"
+    image: "geerlingguy/docker-debian12-ansible:latest"
     command: /sbin/init
     tmpfs:
       - /run
@@ -15,8 +15,8 @@ platforms:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
     network: "restic_remote_network"
 
-  - name: restic_remote_${MOLECULE_DISTRO:-debian11}
-    image: "geerlingguy/docker-${MOLECULE_DISTRO:-debian11}-ansible:latest"
+  - name: restic_remote_debian12
+    image: "geerlingguy/docker-debian12-ansible:latest"
     command: /sbin/init
     tmpfs:
       - /run
