--- a/tasks/configure_server.yml
+++ b/tasks/configure_server.yml
@@ -69,7 +69,7 @@
         state: started
         enabled: true
       when:
-        - _client_has_restic_backup_service
+        - _client_has_restic_backup_service.stat.exists
 
     - name: Enable restic-remote-prune service
       ansible.builtin.systemd:
@@ -77,7 +77,7 @@
         state: started
         enabled: true
       when:
-        - _client_has_restic_prune_service
+        - _client_has_restic_prune_service.stat.exists
 
     - name: Enable restic-remote-exporter service
       ansible.builtin.systemd:
@@ -85,7 +85,7 @@
         state: started
         enabled: true
       when:
-        - _client_has_restic_exporter_service
+        - _client_has_restic_exporter_service.stat.exists
   delegate_to: "{{ backup_server }}"
   become: true
   delegate_facts: false
