--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -8,7 +8,9 @@
 
   vars:
     backup_server: backupserver
+    restic_client_repository: templates/repository-REST.j2
     restic_client_use_lvm: false  # doesn't work inside container, would use host's LVM
+    restic_client_is_remote: true
 
   pre_tasks:
     - name: Force update package cache (Debian)
