Clarify where passwords are actually needed, rework 'backup_server' var.
* 'backup_server' var is just the inventory_hostname the whole time, so
  there's no point in putting it behind another variable. Just uses
  inventory_hostname everywhere, or first member of 'backupservers'
  group.
* Default to empty passwords, as key-auth might be the default in most
  cases I optimistically guess.

--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -6,9 +6,7 @@
 
   vars:
     restic_client_is_remote: true
-    backup_server: backupserver
-    backup_server_password: ""
-    backup_server_become_password: ""
+    backup_server: "{{ groups['backupservers'][0] }}"
 
   roles:
     - role: fifty2technology.restic_remote
